--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,13 @@
   "rewrites": [
     { "source": "/", "destination": "/index.html" },
     { "source": "/car-accident", "destination": "/car-accident/index.html" },
-    { "source": "/car-accident/", "destination": "/car-accident/index.html" },
-    { "source": "/los-angeles-car-accident", "destination": "https://pi-search-caraccident-lp.vercel.app" },
-    { "source": "/los-angeles-car-accident/", "destination": "https://pi-search-caraccident-lp.vercel.app/" },
-    { "source": "/los-angeles-car-accident/:path*", "destination": "https://pi-search-caraccident-lp.vercel.app/:path*" }
+    { "source": "/car-accident/", "destination": "/car-accident/index.html" }
   ],
   "redirects": [
-    { "source": "/images/la/shawn-rokni.jpg", "destination": "/images/la/attorney-hero.webp", "permanent": true }
+    {
+      "source": "/images/la/shawn-rokni.jpg",
+      "destination": "/images/la/attorney-hero.webp",
+      "permanent": true
+    }
   ]
 }
